<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lan_dev_edit_dialog_outer_lay_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lan_dev_edit_dialog_name_lay_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lan_dev_edit_dialog_name_title" />

        <EditText
            android:id="@+id/lan_dev_edit_dialog_name_et_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/lan_dev_edit_dialog_name_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lan_dev_edit_dialog_mac_lay_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lan_dev_edit_dialog_mac_title" />

        <EditText
            android:id="@+id/lan_dev_edit_dialog_mac_et_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789-:abcdefABCDEF"
            android:maxLength="17"
            android:singleLine="true"
            android:hint="@string/lan_dev_edit_dialog_mac_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lan_dev_edit_dialog_ip_lay_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lan_dev_edit_dialog_ip_title" />

        <EditText
            android:id="@+id/lan_dev_edit_dialog_ip_et_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:inputType="number"
            android:maxLength="15"
            android:singleLine="true"
            android:hint="@string/lan_dev_edit_dialog_ip_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lan_dev_edit_dialog_hostname_lay_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lan_dev_edit_dialog_hostname_title" />

        <EditText
            android:id="@+id/lan_dev_edit_dialog_hostname_et_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/lan_dev_edit_dialog_hostname_hint" />
    </LinearLayout>
</LinearLayout>